syntax = "proto3";

package Trento.Checks.V1;
option go_package = "/;events";

import "protobuf/target.proto";

message ExecutionStarted {
    string execution_id = 1;
    string group_id = 2;
    repeated Target targets = 3;
    string target_type = 4;
}